# crafting_interpreters_interpreter

./: .gitignore  Expr.java  GenerateAst.java  Lox.java  README.md  Scanner.java  Token.java  TokenType.java  pom.xml  prova.lox
MyInterpreter/: .gitignore  pom.xml
MyInterpreter/src/main/java/it/polimi/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
MyInterpreter/src/main/java/it/polimi/tool/: GenerateAst.java
clox/: CMakeLists.txt
clox/include/: chunk.h  compiler.h  debug.h  memory.h  value.h  vm.h
clox/src/: chunk.c  compiler.c  debug.c  main.c  memory.c  scanner.c  value.c  vm.c
